# testhpp

./: .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  check-style.sh  coverage.sh
doc/: README.md
include/sepbit/: test.hpp
test/: CMakeLists.txt  exampleTest.cpp
